client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-deployment
      component: web
  template:
    metadata:
      labels:
        app: client-deployment
        component: web
    spec:
      containers:
      - name: client-deployment
        image: stephehgrier/multi-client
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
