worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-deployment
      component: worker
  template:
    metadata:
      labels:
        app: worker-deployment
        component: worker
    spec:
      containers:
      - name: worker-deployment
        image: stephehgrier/multi-worker
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
