client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
  component: web
spec:
  type: ClusterIP
  selector:
    app: myapp
    component: web
  ports:
  - port: 3000
    targetPort: 3000
