redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  component: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-deployment
      component: redis
  template:
    metadata:
      labels:
        app: redis-deployment
        component: redis
    spec:
      containers:
      - name: redis-deployment
        image: redis
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
  compoenent: redis
spec:
  type: ClusterIP
  selector:
    app: redis-cluster-ip-service
    component: redis
  ports:
  - port: 6379
    targetPort: 6379
