server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip
  component: server
spec:
  type: ClusterIP
  selector:
    app: server-cluster-ip
    component: server
  ports:
  - port: 5000
    targetPort: 5000
